<resources>
    <string name="app_name">Internship</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_deliveries">Deliveries</string>
    <string name="drawer_explore">Explore</string>
    <string name="drawer_olders_history">Olders history</string>
    <string name="drawer_contributions">Contributions</string>
    <string name="drawer_help_amp_feedback"><![CDATA[Help & feedback]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
