<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_deliveries"
            android:icon="@drawable/ic_deliveries_grey"
            android:title="@string/drawer_deliveries" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore_grey"
            android:title="@string/drawer_explore" />
        <item
            android:id="@+id/nav_olders_history"
            android:icon="@drawable/ic_olders_history_grey"
            android:title="@string/drawer_olders_history" />
        <item
            android:id="@+id/nav_contributions"
            android:icon="@drawable/ic_contributions_grey"
            android:title="@string/drawer_contributions" />
        <item
            android:id="@+id/nav_help_feedback"
            android:icon="@drawable/ic_help_feedback_grey"
            android:title="@string/drawer_help_amp_feedback" />
    </group>

</menu>
